Integrate hbase modules with the build